--- a/Projeto AEDA/Projeto AEDA/Projeto AEDA.vcxproj
+++ b/Projeto AEDA/Projeto AEDA/Projeto AEDA.vcxproj
@@ -146,6 +146,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Agency.cpp" />
+    <ClCompile Include="Driver.cpp" />
+    <ClCompile Include="Guest.cpp" />
+    <ClCompile Include="Passenger.cpp" />
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="User.cpp" />
+    <ClCompile Include="Utilities.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Agency.h" />
+    <ClInclude Include="Driver.h" />
+    <ClInclude Include="Guest.h" />
+    <ClInclude Include="Passenger.h" />
+    <ClInclude Include="User.h" />
+    <ClInclude Include="Utilities.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Users.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
