buddies file, balance e deletebuddies
Adicionei o ficheiro Buddies
O construtor de user recebe agora tb o balance
Adicionei a função deleteBuddies
PS: writeBuddies com erros

--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Buddies.txt" />
     <Text Include="Users.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
