data e ordenaçao de transaçoes
Criação da classe data
Faz o display das transaçoes de forma ordenada
/!\ problema no display quando o dia tem so um digito

--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agency.cpp" />
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="Guest.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Stop.cpp" />
@@ -31,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agency.h" />
+    <ClInclude Include="Date.h" />
     <ClInclude Include="Guest.h" />
     <ClInclude Include="Stop.h" />
     <ClInclude Include="Tools.h" />
