--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="Date.h" />
     <ClInclude Include="Guest.h" />
     <ClInclude Include="Hour.h" />
+    <ClInclude Include="SearchAndSort.h" />
     <ClInclude Include="Stop.h" />
     <ClInclude Include="Tools.h" />
     <ClInclude Include="Transactions.h" />
