--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="Stop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SearchAndSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Users.txt">
