--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
@@ -100,5 +100,8 @@
     <Text Include="Stops.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
+    <Text Include="ActiveTrips.txt">
+      <Filter>Source Files\Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
