--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
@@ -79,22 +79,22 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Users.txt">
+    <Text Include="FICHEIROS\ActiveTrips.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
-    <Text Include="Transactions.txt">
+    <Text Include="FICHEIROS\Buddies.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
-    <Text Include="Buddies.txt">
+    <Text Include="FICHEIROS\Record.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
-    <Text Include="Record.txt">
+    <Text Include="FICHEIROS\Stops.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
-    <Text Include="Stops.txt">
+    <Text Include="FICHEIROS\Transactions.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
-    <Text Include="ActiveTrips.txt">
+    <Text Include="FICHEIROS\Users.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
   </ItemGroup>
