--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
@@ -29,9 +29,11 @@
     <ClCompile Include="Trip.cpp" />
     <ClCompile Include="User.cpp" />
     <ClCompile Include="Utilities.cpp" />
+    <ClCompile Include="Vehicle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agency.h" />
+    <ClInclude Include="BST.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="Hour.h" />
     <ClInclude Include="SearchAndSort.h" />
@@ -41,6 +43,7 @@
     <ClInclude Include="Trip.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="Utilities.h" />
+    <ClInclude Include="Vehicle.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ActiveTrips.txt" />
