Ler do ficheiro distances

--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Text Include="ActiveTrips.txt" />
     <Text Include="Buddies.txt" />
+    <Text Include="Distances.txt" />
     <Text Include="Record.txt" />
     <Text Include="Stops.txt" />
     <Text Include="Transactions.txt" />
