--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj.filters
@@ -112,5 +112,8 @@
     <Text Include="VehiclesTree.txt">
       <Filter>Source Files\Resource Files</Filter>
     </Text>
+    <Text Include="Distances.txt">
+      <Filter>Source Files\Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
