extract and saving candidatequeues

--- a/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
+++ b/Trabalho AEDA/Trabalho AEDA/Trabalho AEDA.vcxproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Text Include="ActiveTrips.txt" />
     <Text Include="Buddies.txt" />
+    <Text Include="CandidatesQueues.txt" />
     <Text Include="Distances.txt" />
     <Text Include="Record.txt" />
     <Text Include="Stops.txt" />
